@@ -1,3 +1,11 @@
+2004-01-27  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Added -q option for fusermount
+
+	* fuse_unmount() now uses -q option of fusermount, so no error is
+	printed if the cause of the program exit is that the filesystem
+	has already been unmounted
+
 2004-01-26  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Released 1.1-pre2
